fix: section subtitle text align

--- a/src/blocks/presentation/presentation.scss
+++ b/src/blocks/presentation/presentation.scss
@@ -47,7 +47,7 @@
 
     @media screen and (max-width: 767px) {
       margin: 10px 0 $marginTitleContentMobile;
-      text-align: center;
+      text-align: justify;
       max-width: 300px;
     }
 
